# mp3-encoder

./: .gitignore  CMakeLists.txt  Makefile  README.md  generate.sh
src/: Makefile  defines.h.in  main.c  mp3_encoder.c  mp3_encoder.h  mp3_encoder_main.c  wave.c  wave.h
training/: converter.c
